add feature in views

--- a/insta/templates/display/navbar.html
+++ b/insta/templates/display/navbar.html
@@ -24,7 +24,7 @@
   	  justify-content: space-between;
   	  align-items: center;
   	  padding: 10px;
-  	  border-bottom: 2px solid #ddd;
+  	  border-bottom: 4px solid blue;
   	}
   	.navbar .logo-section {
   	  display: flex;
@@ -46,7 +46,7 @@
   	  width: 40px;
   	}
   	.navbar .logoname {
-  	  width: 130px;
+  	  width: 125px;
   	}
   	.navbar .input-search {
   	  padding: 10px;
