--- a/insta/templates/display/base.html
+++ b/insta/templates/display/base.html
@@ -23,7 +23,7 @@
 <body>
     {% include 'display/navbar.html' %}
 
-    <div class="container-fluid" id="body">
+    <div class="container" id="body">
         {% block content %} 
         
         {% endblock %}
