--- a/insta/templates/display/home.html
+++ b/insta/templates/display/home.html
@@ -1,93 +1,59 @@
-{% extends 'display/base.html' %} 
-{% load static%} 
-{% load bootstrap3 %} 
-{% block content %} 
-{{block.super}}
-
-{% if request.user.is_authenticated %}
-
-{% else %}
-<p>You must be authenticated</p>
-{% endif %}
-<div class="homebody">
-    <div class="container">
+{% extends 'display/base.html'%}
 
 
-
-
-        <!-- SECTION 1 -->
-
-        <!-- USED TO STYLE PICTURE-BODYSIZE IN HOME-PAGE  -->
-        <div class="w3-card-6" style="width:56%">
-
-            <div class="container">
-                {% if all_images %} {% for chris in all_images %}
-
-                <div class="imagepadding">
-
-                    <!-- BootStrap Class For adding Border arround picture -->
-                    <div class="panel panel-primary">
-
-                        <!-- SECTION 1 PROFILE & user name -->
-
-                        <!-- Profile Picture and User name for account -->
-                        
-                        <p class="usernamehome-dp">
-                            <img src="{% static 'images/pic3.jpg' %}" class="circlehome-dp" alt="signuplogo ">
-                         {% if all_users %} {% for user in all_users %}
-                            <strong> "{{user.user}}" </strong>
-                        {% endfor %}{% else %}
-                        <strong>Crimstagram</strong>
-
-                        {% endif %}
-                        </p>
-                       
-                        <!-- SECTION 2 (IMAGE) -->
-                        <!-- POSTED IMAGE -->
-                        <<!--  -->
-
-                        <!--Like & Comment Section -->
-                        <div class="container">
-                            <div class='likesect'>
-
-                                <span class="like-row">
-                                    {% if liked %}
-                                    <img class="likedhrt" src="{% static 'images/liked.png' %}" alt="liked picture"class="img-responsive"> {% else %}
-                                    <img class="likehrt" src="{% static 'images/liked.png' %}" alt="not likedpicture" class="img-responsive"> {% endif %}
-                                    <img class="commenthrt" id='comment-icon' src="../../static/images/comment.png"class="img-responsive" alt=" commentImage">
-                                    <img class="savehrt" src="{% static 'images/unsaved.png' %}" alt="save picture">
-                                        
-                                    </p>
-                                </span>
-                                <p><strong>5 likes</strong> </p>
-                        <!-- Caption Section -->
-                        {% if all_users %} {% for user in all_users %}
-                        <strong> "{{user.user}}" </strong>
-                        {% endfor %}{% else %}
-                        <p><strong>crimmz-gram</strong> </p>
-                        
-                        {% endif %} 
-
-                        <div class='commentsection'>
-                            <input type='text' id='cmnt' placeholder='Add a comment...'>
-                            <span class='dot02'></span>
-                        </div>
-                            </div>
-                        </div>
-
-                    </div>
-
-
-                </div>
-                {% endfor %} {% else%}
-                <h3>You have no images</h3>
-
-                {% endif %}
-
+{% block content %}
+<div class="row">
+<div class="col-md-10">
+<div class="row">
+    {% for image in images %}
+    <div class="col-md-4">
+        <div class="card animated zoomInRight">
+            <div class="card-title">
+                <img src="{{user.profile.profile_pic.url}}" alt="" width="20" height="30">
+                
             </div>
-
-
+            <div class="card-img-top ">
+                <img src="{{image.image.url}}" alt="" class="rgba-red-slight i" width="100%" height="350">
+            </div>
+            <div class="card-footer">
+                <h2></h2>
+            </div>
         </div>
     </div>
+    {% endfor %}
+</div>
+</div>
+<div class="col-md-2">
+    <div class="card testimonial-card">
+        <!-- Background color -->
+        <div class="card-up indigo lighten-1"></div>
+      
+        <!-- Avatar -->
+        <div class="avatar mx-auto white">
+          <img src="{{user.profile.profile_pic.url}}"  alt=" avatar" height="100" width="100">
+        </div>
+      
+        <!-- Content -->
+        <div class="card-body">
+          <!-- Name -->
+          <h4 class="card-title text-center pink-text"> {{user.username}}</h4>
+          <hr>
+          <!-- Quotation -->
+        </div>
+        <ul class="list-inline">
+                <li class="list-inline-item">
+                    <span class="font-weight-bold">{{images|length}} </span> Posts
+                </li>
+                <li class="list-inline-item">
+                    <span class="font-weight-bold">{{followers|length}}</span> Followers
+                </li>
+                <li class="list-inline-item">
+                    <span class="font-weight-bold">{{following|length}}</span> Following
+                </li>
+            </ul>
+      </div>
+      <!-- Card -->
+   
+</div>
 </div>
 {% endblock %}
