--- a/insta/templates/registration/login.html
+++ b/insta/templates/registration/login.html
@@ -26,8 +26,8 @@
 
                 <div class="panel-body">
 
-                    <form action="/accounts/login/" method="post">
-                        {% csrf_token %} {% bootstrap_form form%}
+                    <form action="/accounts/login/" method="POST">
+                        {% csrf_token %} {% bootstrap_form form %}
 
                         <div class="form-group">
                             <input type="submit" class="btn btn-primary btn-lg btn-block" value="Login">
@@ -45,7 +45,7 @@
                             <a href="/accounts/register/" class="btn btn-primary btn-sm pull-right">Sign Up</a>
                         </div>
                         <!--Collapse Signup Button! -->
-                        <input type="hidden" name="next" value="{{next}}">
+                        <input type="hidden" name="next" value="/">
 
                     </form>
 
