--- a/insta/templates/registration/login.html
+++ b/insta/templates/registration/login.html
@@ -47,7 +47,7 @@
                             <a href="/accounts/register/" class="btn btn-primary btn-sm pull-right">Sign Up</a>
                         </div>
                         <!--Collapse Signup Button! -->
-                        <input type="hidden" name="next" value="/">
+                        <input type="hidden" name="next" value="">
 
                     </form>
 
