--- a/insta/templates/display/userprofile.html
+++ b/insta/templates/display/userprofile.html
@@ -3,6 +3,13 @@
 {% block content %} 
 {{block.super}}
 
-this is profile page
+
+<div class="container">
+	<div class="row">
+		<div class='col-md-6'>
+			{{user}} <a href="{%url 'upload'%}">Post Photos</a>
+		</div>
+	</div>
+</div>
 
 {% endblock %}
