--- a/insta/templates/display/base.html
+++ b/insta/templates/display/base.html
@@ -1,4 +1,4 @@
-{% load bootstrap3 %} 
+{% load bootstrap4 %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -16,6 +16,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 
+
     <title> Insta</title>
     {% block styles%} {% bootstrap_css %} {% endblock %}
 </head>
@@ -24,24 +25,30 @@
     {% include 'display/navbar.html' %}
 
     <div class="container" id="body">
-        {% block content %} 
-        
+        {% block content %}
+
         {% endblock %}
     </div>
-     
+
+
+    ￼
 
     {% block scripts %}
     <script type="text/javascript" src="{% static 'css/app.js' %}"></script>
-
-    {% bootstrap_javascript %} 
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
+    <!-- JQuery -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <!-- Bootstrap tooltips -->
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <!-- MDB core JavaScript -->
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.1/js/mdb.min.js"></script>
+    {% bootstrap_javascript %}
     {% endblock %}
 
 </body>
-
-<style type="text/css">
-    body{
-        background-image: 
-
-</style>
-
 </html>
