--- a/insta/templates/display/home.html
+++ b/insta/templates/display/home.html
@@ -3,44 +3,70 @@
 
 {% block content %}
 <div class="row">
-<div class="col-md-10">
-<div class="row">
-    {% for image in images %}
-    <div class="col-md-4">
-        <div class="card animated zoomInRight">
-            <div class="card-title">
-                <img src="{{user.profile.profile_pic.url}}" alt="" width="20" height="30">
-                
+    <div class="col-md-10">
+        <div class="row">
+            {% for image in images %}
+            <div class="col-md-4">
+                <div class="card animated zoomInRight">
+                    <div class="card-title">
+                        <img src="{{user.profile.profile_pic.url}}" alt="" width="20" height="30">
+
+                    </div>
+                    <div class="card-img-top ">
+                        <img src="{{image.image.url}}" alt="" class="rgba-red-slight i" width="100%" height="350"
+                            data-toggle="modal" data-target="#{{image.id}}">
+                    </div>
+                    <div class="modal" id="{{image.id}}" tabindex="-1" role="dialog"
+                        aria-labelledby="exampleModalScrollableLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-scrollable" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    <div class="mycolumn">
+                                        <img src="{{image.image.url}}" alt="Image" class="img-width" style="width:100%">
+                                    </div>
+                                    <hr>
+                                    <div>
+                                        <p class="edit"> <strong>CAPTION:</strong> </p>
+                                        <hr>
+                                        <p class="edit"> {{image.image_caption}} </p>
+                                    </div>
+                                </div>
+                                <div class="modal-footer edit">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <h2></h2>
+                    </div>
+                </div>
             </div>
-            <div class="card-img-top ">
-                <img src="{{image.image.url}}" alt="" class="rgba-red-slight i" width="100%" height="350">
-            </div>
-            <div class="card-footer">
-                <h2></h2>
-            </div>
+            {% endfor %}
         </div>
     </div>
-    {% endfor %}
-</div>
-</div>
-<div class="col-md-2">
-    <div class="card testimonial-card">
-        <!-- Background color -->
-        <div class="card-up indigo lighten-1"></div>
-      
-        <!-- Avatar -->
-        <div class="avatar mx-auto white">
-          <img src="{{user.profile.profile_pic.url}}"  alt=" avatar" height="100" width="100">
-        </div>
-      
-        <!-- Content -->
-        <div class="card-body">
-          <!-- Name -->
-          <h4 class="card-title text-center pink-text"> {{user.username}}</h4>
-          <hr>
-          <!-- Quotation -->
-        </div>
-        <ul class="list-inline">
+    <div class="col-md-2">
+        <div class="card testimonial-card">
+            <!-- Background color -->
+            <div class="card-up indigo lighten-1"></div>
+
+            <!-- Avatar -->
+            <div class="avatar mx-auto white">
+                <img src="{{user.profile.profile_pic.url}}" alt=" avatar" height="100" width="100">
+            </div>
+
+            <!-- Content -->
+            <div class="card-body">
+                <!-- Name -->
+                <h4 class="card-title text-center pink-text"> {{user.username}}</h4>
+                <hr>
+                <!-- Quotation -->
+            </div>
+            <ul class="list-inline">
                 <li class="list-inline-item">
                     <span class="font-weight-bold">{{images|length}} </span> Posts
                 </li>
@@ -51,9 +77,9 @@
                     <span class="font-weight-bold">{{following|length}}</span> Following
                 </li>
             </ul>
-      </div>
-      <!-- Card -->
-   
-</div>
+        </div>
+        <!-- Card -->
+
+    </div>
 </div>
 {% endblock %}
