--- a/insta/templates/display/userprofile.html
+++ b/insta/templates/display/userprofile.html
@@ -1,6 +1,6 @@
-{% extends 'display/base.html' %} 
-{% load bootstrap3 %} 
-{% block content %} 
+{% extends 'display/base.html' %}
+{% load bootstrap4 %}
+{% block content %}
 {{block.super}}
 
 
@@ -11,5 +11,47 @@
 		</div>
 	</div>
 </div>
+{% for image in images %}
+<div class="col-md-4">
+	<div class="card animated zoomInRight">
+		<div class="card-title">
+			<img src="{{user.profile.profile_pic.url}}" alt="" width="20" height="30">
+
+		</div>
+		<div class="card-img-top ">
+			<img src="{{image.image.url}}" alt="" class="rgba-red-slight i" width="100%" height="350"
+				data-toggle="modal" data-target="#{{image.id}}">
+		</div>
+		<div class="modal" id="{{image.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalScrollableLabel"
+			aria-hidden="true">
+			<div class="modal-dialog modal-dialog-scrollable" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+					<div class="modal-body">
+						<div class="mycolumn">
+							<img src="{{image.image.url}}" alt="Image" class="img-width" style="width:100%">
+						</div>
+						<hr>
+						<div>
+							<p class="edit"> <strong>CAPTION:</strong> </p>
+							<hr>
+							<p class="edit"> {{image.image_caption}} </p>
+						</div>
+					</div>
+					<div class="modal-footer edit">
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="card-footer">
+			<h2></h2>
+		</div>
+	</div>
+</div>
+{% endfor %}
 
 {% endblock %}
