deeted index image

--- a/insta/templates/display/index.html
+++ b/insta/templates/display/index.html
@@ -10,7 +10,7 @@
     <div class="col-md-4">
         <div class="card animated zoomInRight">
             <div class="card-title">
-                   <img src="/static/img/gra.png">
+                   <img src="">
                 
             </div>
             <div class="card-img-top ">
